Add one-command Java launcher that compiles and runs